--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,11 +2,9 @@
 <resources>
 
     <string name="app_name">HustVote</string>
-    <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
-    <string name="title_activity_hall">HallActivity</string>
+    <string name="title_activity_hall">投票大厅</string>
     <string name="login_ok">登录成功</string>
-    <string name="email_need">别逗</string>
+    <string name="email_need">请输入用户名和密码</string>
     <string name="logining">登录中...</string>
     <string name="cancel">取消</string>
     <string name="logout_ok">注销成功</string>
@@ -19,6 +17,17 @@
     <string name="xlistview_footer_hint_normal">查看更多</string>
     <string name="xlistview_footer_hint_ready">松开载入更多</string>
     <string name="title_vote_activity">VoteActivity</string>
+    <string name="vote_result">投票结果</string>
+    <string name="qrcode">扫描二维码</string>
+    <string name="message">查看消息</string>
+    <string name="logout">注销</string>
+    <string name="hall">投票大厅</string>
+    <string name="please_complete_info">请填写完整信息</string>
+    <string name="password_different">两次填写的密码不一致</string>
+    <string name="register_loading">注册中...</string>
+    <string name="choice_intro">选项详情</string>
+    <string name="register">注册</string>
+    <string name="join_vote">参与投票</string>
 
     <integer name="viewfinder_border_width">4</integer>
     <integer name="viewfinder_border_length">60</integer>
