--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="logining">登录中...</string>
     <string name="cancel">取消</string>
     <string name="logout_ok">注销成功</string>
-    <string name="geting">获取中...</string>
+    <string name="geting">载入中...</string>
     <string name="xlistview_header_hint_normal">下拉刷新</string>
     <string name="xlistview_header_hint_ready">松开刷新数据</string>
     <string name="xlistview_header_hint_loading">正在加载...</string>
